# data-pipelines

./: README.md  pyproject.toml
.github/workflows/: test.yml
data_pipelines/definition/: cedict.py  versions.py
tests/: test_data_pipelines.py
tests/definition/: test_cedict.py
