[tool.poetry]
name = "data_pipelines"
version = "0.1.0"
description = ""
authors = ["Lucas Kjaero <lucas@lucaskjaero.com>"]

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^0.14.3"
requests = "^2.25.1"
boto3 = "^1.16.54"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
